fixed images on small, fixed white space on mobile

--- a/app/styles/modules/_experts-block.css
+++ b/app/styles/modules/_experts-block.css
@@ -30,7 +30,16 @@
         color: $reg;
         margin-bottom: 60px;
         
+        
+        img{
+            width: 200px;
+        }
+        
         @mixin atLarge {
+            
+        img{
+            width: 300px;
+        }
             display: inline-block;
             width:  33%;
             padding: 5px;
