--- a/app/styles/modules/_globals.css
+++ b/app/styles/modules/_globals.css
@@ -1,35 +1,30 @@
 
-html{
-
-overflow-x: hidden;
-
-}
-
-body {
-
-
-    a {
+html, body {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    overflow-x: hidden; 
+    
+        a {
         text-decoration: none;
         color: $reg;
-
-
-    }
+ }
 
     li {
         list-style: none;
      
     }
 
-
-    width: 100%;
-    font-family: 'Roboto',
-    sans-serif;
-    margin: 0 auto;
 }
 
+
+
+
 .container {
+    
     max-width: 2000px;
     height: 100%;
+    width: 100%;
     padding: 0 20px;
     margin: 0 auto;
 
@@ -69,7 +64,7 @@ body {
     color: #0f0 !important;
     outline: solid #f00 1px !important;
 }
-*/
 
+*/
 
 }
