--- a/app/styles/modules/_service-cols.css
+++ b/app/styles/modules/_service-cols.css
@@ -101,12 +101,14 @@
             height: auto;
 
             @mixin atSmall {
-                width: 400px;
+                width: 300px;
 
 
             }
-            @mixin atMedium {}
-            @mixin atLarge {}
+            @mixin atMedium {
+                width: 400px;
+            }
+         
         }
     }
 
