--- a/app/styles/modules/_site-header.css
+++ b/app/styles/modules/_site-header.css
@@ -5,7 +5,6 @@
     background: rgba(255, 255, 255, 0.9);
     width: 100%;
     height: 80px;
-   
   
 
 
@@ -71,10 +70,10 @@
         height: 20px;
         border: 2px black solid;
         position: absolute;
-        right: 0;
+        right: 50px;
         top: 43px;
-        bottom: 40px;
-        margin-right: 20px;
+      
+       
 
         @mixin atMedium {
             display: none;
